@@ -16,6 +16,9 @@
 	golden file diff to ignore the embedded command line information
 	in the spice-sdb golden files.
 
+	* scheme/gnet-calay.scm: Added backed written by John Doty for
+	the Calay netlist. Thanks!
+
 2007-04-21 Stuart Brorson   <sdb@cloud9.net>
 	* tests/spice-sdb/*  Added new spice-sdb test directory.  Then
 	created test environment similar to Dan's regression tests for
